huracanesCompilador.java
/* Generated By:JavaCC: Do not edit this line. huracanesCompilador.java */
class huracanesCompilador implements huracanesCompiladorConstants {

        public static void main (String[] args) throws ParseException{

                System.out.println("ocean,numCycl,year,name,numTrcks,yearTrck,monthTrck,dayTrck,hourTrck,minutsTrck,recordId,statusSys,latitude,longitude,maxSustWin,minPress,34ktNE,34ktSE,34ktSW,34ktNW,50ktNE,50ktSE,50ktSW,50ktNW,64ktNE,64ktSE,64ktSW,64ktNW,radMaxWind");

                try {
                        huracanesCompilador analizador = new huracanesCompilador(System.in);
                        analizador.compilador();
                }
                catch(ParseException e) {
                        System.out.println("hay un error: ");
                        System.out.println(e.getMessage());
                }
        }

// Metodo de ayuda para siempre imprimir el id en cada regitrso correspondiente
  static final public String Identificador() throws ParseException {
    Token temporal;
    String identificadorRegistro = "", aux = "";
    // Generar cadena de retorno
        temporal = jj_consume_token(IdHuracan);
        aux = temporal.image.toString();
                String al = aux.substring(0,2);
                String numberHur = aux.substring(2,4);
                String year = aux.substring(4);

        identificadorRegistro += al + "," + numberHur +"," + year;
    temporal = jj_consume_token(NombreHuracan);
        identificadorRegistro += temporal.image;
        {if (true) return identificadorRegistro;}
    throw new Error("Missing return statement in function");
  }

  static final public void huracan() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IdHuracan:
      jj_consume_token(IdHuracan);
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NombreHuracan:
      jj_consume_token(NombreHuracan);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
  }

  static final public String informacion() throws ParseException {
        Token fecha, velocidadHur, lat, longi;
        Token max, min,ktNE34, ktSE34,ktSW34, ktNW34, ktNE50, ktSE50, ktSW50,ktNW50, ktNE64, ktSE64,ktSW64,ktNW64, radMaxWind;
        String aux = "", informacion = "", year, month, day, hour, minutes, cadena = "";
        String[]  separador;
    fecha = jj_consume_token(Fecha);
                aux = fecha.image.toString();

                separador = aux.split("," , 2);

                year = separador[0].substring(0,4)+ ",";

                month = separador[0].substring(4,6)+ ",";

                day = separador[0].substring(6)+ ",";


                hour = separador[1].substring(0,2) + ",";

                minutes = separador[1].substring(2);

                cadena += year + month + day+ hour+ minutes;

                informacion += cadena;
    velocidadHur = jj_consume_token(VelocidadHuracan);
                informacion += velocidadHur;
    lat = jj_consume_token(Latitud);
                informacion += lat;
    longi = jj_consume_token(Longitud);
                informacion += longi;
    max = jj_consume_token(Vientos);
        informacion += max;
    min = jj_consume_token(Vientos);
        informacion += min;
    ktNE34 = jj_consume_token(Vientos);
        informacion += ktNE34;
    ktSE34 = jj_consume_token(Vientos);
        informacion += ktSE34;
    ktSW34 = jj_consume_token(Vientos);
        informacion += ktSW34;
    ktNW34 = jj_consume_token(Vientos);
        informacion += ktNW34;
    ktNE50 = jj_consume_token(Vientos);
        informacion += ktNE50;
    ktSE50 = jj_consume_token(Vientos);
        informacion += ktSE50;
    ktSW50 = jj_consume_token(Vientos);
        informacion += ktSW50;
    ktNW50 = jj_consume_token(Vientos);
        informacion += ktNW50;
    ktNE64 = jj_consume_token(Vientos);
        informacion += ktNE64;
    ktSE64 = jj_consume_token(Vientos);
        informacion += ktSE64;
    ktSW64 = jj_consume_token(Vientos);
        informacion += ktSW64;
    ktNW64 = jj_consume_token(Vientos);
                informacion += ktNW64;
    radMaxWind = jj_consume_token(Vientos);
                aux = ktNW64.image.toString();

        aux = aux.replace(",", "");

                informacion += aux;

                {if (true) return informacion;}
    throw new Error("Missing return statement in function");
  }

  static final public void compilador() throws ParseException {
    String cabecera, informacionRegistro;
    label_1:
    while (true) {
      cabecera = Identificador();
      label_2:
      while (true) {
        informacionRegistro = informacion();
                        System.out.println(cabecera + informacionRegistro);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case Fecha:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IdHuracan:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public huracanesCompiladorTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x2,0x4,0x10,0x2,};
   }

  /** Constructor with InputStream. */
  public huracanesCompilador(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public huracanesCompilador(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new huracanesCompiladorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public huracanesCompilador(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new huracanesCompiladorTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public huracanesCompilador(huracanesCompiladorTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(huracanesCompiladorTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List jj_expentries = new java.util.ArrayList();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[31];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 4; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 31; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
